[package]
name = "ellie_playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ellie_engine = { version = "0.9.0", git = "https://github.com/behemehal/Ellie-Language", default-features = false, features = [ "compiler", "vm", "renderer_utils", "fmt"] }
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6" }
wee_alloc = { version = "0.4.5" }
bincode = { version = "1.0" }
js-sys = "0.3.59"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
