[package]
name = "ellie_playground"
version = "0.1.0"
edition = "2021"

[package.metadata]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ellie_engine = { version = "0.9.0", git = "https://github.com/behemehal/Ellie-Language", branch = "StaticArray", default-features = false, features = [
  "compiler",
  "vm",
  "renderer_utils",
  "fmt",
  "std",
] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = { version = "0.1.7" }
wee_alloc = { version = "0.4.5" }
js-sys = "0.3.64"
getrandom = { version = "0.2", features = ["js"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dependencies.web-sys]
version = "0.3.64"
features = ['console']
